# QtExample

./: CMakeLists.txt  imageResource.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  untitled2.pro
